feat: added wireframin, updated erd, usecase

--- a/sources.bib
+++ b/sources.bib
@@ -1,5 +1,5 @@
 % Book about wireframing
-@book{hamm14,
+@BOOK{hamm14,
   author    = {Hamm, Matthew J.},
   date      = {2014},
   title     = {Wireframing Essentials},
@@ -29,7 +29,7 @@
 }
 
 % HORTON, William, e-learning by Design
-@book{horton11,
+@BOOK{horton11,
   author    = {Horton, William},
   date      = {2011},
   title     = {e-Learning by Design},
@@ -43,7 +43,7 @@
 }
 
 % MAUTHE, THOMAS, content management systems
-@book{mauthe04,
+@BOOK{mauthe04,
   author    = {Mauthe, A. and Thomas, P.},
   date      = {2004},
   title     = {Professional Content Management Systems: Handling Digital Media Assets},
@@ -57,7 +57,7 @@
 }
 
 % WELLING translated to cz
-@book{welling17,
+@BOOK{welling17,
   author     = {Welling, L. and Thomson, L.},
   translator = {Ondřej Baše},
   date       = {2017},
@@ -70,6 +70,8 @@
   isbn       = {978-80-251-4892-1},
   langid     = {czech},
 }
+
+
 
 % LANG, Leoš. \textit{Implementace e-learningového modulu pro systém
 % Wordpress} [online]. Brno, 2019 [cit. 2023-04-15]. Dostupné z:
@@ -96,6 +98,16 @@
     urldate   = {2023-03-10},
     location  = {},
     langid    = {english},
+}
+
+@ONLINE{mobile_usage,
+	publisher = {Statista GmbH },
+	title = {Global mobile traffic worldwide 2022 1stQ},
+	data = {2022},
+	url = {http://web.archive.org/web/20230512021013/https://www.statista.com/statistics/277125/share-of-website-traffic-coming-from-mobile-devices/},
+	urldate = {2023-05-12},
+	location = {Hamburg},
+	langid = {english},
 }
 
 % W3Tech wordpress usage
