feat: most of the work done
- misses refactoring of implementation

--- a/sources.bib
+++ b/sources.bib
@@ -71,7 +71,19 @@
   langid     = {czech},
 }
 
-
+% contains good info about MVC
+@BOOK{gilmore09,
+  author     = {Gilmore, W. Jason},
+  date       = {2009},
+  title      = {Easy PHP Websites with the Zend Framework},
+  subtitle   = {}, % NONE
+  edition    = {1},
+  location   = {Columbus},
+  publisher  = {W.J. Gilmore, LLC},
+  pagetotal  = {313},
+  isbn       = {978-0615303888},
+  langid     = {english},
+}
 
 % LANG, Leoš. \textit{Implementace e-learningového modulu pro systém
 % Wordpress} [online]. Brno, 2019 [cit. 2023-04-15]. Dostupné z:
@@ -93,7 +105,7 @@
     author    = {Imed Bouchrika, Phd},
     publisher = {Research.com},
     title     = {What Is eLearning? Types, Advantages, and Drawbacks},
-    data      = {2022/2023},
+    date      = {2022/2023},
     url       = {https://research.com/education/what-is-elearning},
     urldate   = {2023-03-10},
     location  = {},
@@ -103,7 +115,7 @@
 @ONLINE{mobile_usage,
 	publisher = {Statista GmbH },
 	title = {Global mobile traffic worldwide 2022 1stQ},
-	data = {2022},
+	date = {2022},
 	url = {http://web.archive.org/web/20230512021013/https://www.statista.com/statistics/277125/share-of-website-traffic-coming-from-mobile-devices/},
 	urldate = {2023-05-12},
 	location = {Hamburg},
@@ -114,7 +126,7 @@
 @ONLINE{w3_wordpress,
     publisher = {Q-Success},
     title     = {Usage statistics and market share of WordPress},
-    data      = {2009/2023},
+    date      = {2009/2023},
     url       = {https://w3techs.com/technologies/details/cm-wordpress},
     urldate   = {2023-03-26},
     location  = {},
@@ -125,7 +137,7 @@
 @ONLINE{codeigniter,
     publisher = {CodeIgniter Foundation},
     title     = {CodeIgniter},
-    data      = {2019/2023},
+    date      = {2019/2023},
     url       = {https://www.codeigniter.com},
     urldate   = {2023-04-01},
     location = {},
@@ -135,7 +147,7 @@
 @ONLINE{codeigniter4,
     publisher = {CodeIgniter Foundation},
     title     = {CodeIgniter4 User Guide},
-    data      = {2019/2023},
+    date      = {2019/2023},
     url       = {https://www.codeigniter.com/user_guide/},
     urldate   = {2023-04-01},
     location  = {},
@@ -146,7 +158,7 @@
 @ONLINE{enai,
     publisher = {European Network for Academic Integrity},
     title     = {About ENAI},
-    data      = {2023},
+    date      = {2023},
     url       = {https://www.academicintegrity.eu/},
     urldate   = {2023-04-01},
     location  = {},
@@ -156,7 +168,7 @@
 @ONLINE{enai_about,
     publisher = {European Network for Academic Integrity},
     title     = {About ENAI},
-    data      = {2023},
+    date      = {2023},
     url       = {https://www.academicintegrity.eu/wp/about-enai/},
     urldate   = {2023-04-01},
     location  = {},
@@ -166,9 +178,78 @@
 @ONLINE{enai_materials,
     publisher = {European Network for Academic Integrity},
     title     = {Interactive database of educational materials},
-    data      = {2023},
+    date      = {2023},
     url       = {https://www.academicintegrity.eu/materials},
     urldate   = {2023-04-01},
+    location  = {},
+    langid    = {english},
+}
+
+@ONLINE{forpsi_data,
+	publisher={Q-Success},
+	title={Overview of web technologies used by Forpsi.com},
+	date={2023},
+	url={https://w3techs.com/sites/info/forpsi.com},
+	urldate={2023-05-15},
+	langid={english}
+}
+
+@ONLINE{tinymce,
+    publisher = {Tiny Technologies Inc},
+    title     = {TinyMCE},
+    date      = {2023},
+    url       = {https://www.tiny.cloud/},
+    urldate   = {2023-05-11},
+    location  = {},
+    langid    = {english},
+}
+
+@ONLINE{moodle,
+    publisher = {Moodle HQ},
+    title     = {Moodle},
+    date      = {2023},
+    url       = {https://moodle.org/},
+    urldate   = {2023-05-12},
+    location  = {},
+    langid    = {english},
+}
+
+@ONLINE{openedx,
+    publisher = {Axim Collaborative},
+    title     = {Open edX},
+    date      = {2023},
+    url       = {https://openedx.org/},
+    urldate   = {2023-05-12},
+    location  = {},
+    langid    = {english},
+}
+
+@ONLINE{canvas,
+    publisher = {Instructure Inc.},
+    title     = {Canvas LMS},
+    date      = {2023},
+    url       = {https://github.com/instructure/canvas-lms},
+    urldate   = {2023-05-12},
+    location  = {},
+    langid    = {english},
+}
+
+@ONLINE{omeka,
+    publisher = {Digital Scholar},
+    title     = {Omeka},
+    date      = {2023},
+    url       = {https://omeka.org/},
+    urldate   = {2023-05-12},
+    location  = {},
+    langid    = {english},
+}
+
+@ONLINE{mediawiki,
+    publisher = {},
+    title     = {Mediawiki},
+    date      = {2023},
+    url       = {https://www.mediawiki.org/wiki/MediaWiki},
+    urldate   = {2023-05-12},
     location  = {},
     langid    = {english},
 }
