feat: should be done

--- a/sources.bib
+++ b/sources.bib
@@ -253,3 +253,13 @@
     location  = {},
     langid    = {english},
 }
+
+@ONLINE{repository,
+	publisher = {Jan Martinek},
+	title = {Interactive database of educational materials},
+	date = {2023},
+	url = {https://github.com/Razzoved/educational-database-bp},
+	urldate = {2023-05-17},
+	location = {Brno},
+	langid = {english},
+}
